Sat Mar  2 15:48:04 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_new_with_max_length,
	gtk_entry_set_max_length): Clamp @max parameter passed in to 
	[0, MAX_SIZE], improve docs. Fix default and range 
	for ::max-length property, range for ::ncursor_position,
	::selection_bound properties. (#55916, Vitaly Tishkov)

	* gtk/gtkmain.c (rewrite_event_for_grabs): Fix typo

Fri Mar  1 18:39:44 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/{gdkevents-x11.c,gdkmain-x11.c,gdkprivate-x11.h,
	gdkwindow-x11.c}: Robustify tracking of pointer grab window.

	* gdk/x11/gdkmain-x11.c: Keep track of current keyboard
	grab window.

	* gdk/x11/gdkmain-x11.c (gdk_pointer_grab_info_libgtk_only,
	gdk_keyboard_grab_info_libgtk_only): Private libgtk => libgtk
	API for finding out current grab information.
	
	* gtk/gtkmain.c (rewrite_event_for_grabs): Rewrite events
	so that the effective behavior of owner_events = TRUE is changed
	to "deliver events to same window group normally" instead
	of "deliver events to same application normally. #69934

	* gtk/gtkrange.c: Use an explicit gtk_grab_add() so that
	it works within the GtkList combo, where there is a 
	owner_events = FALSE gdk_pointer_grab() already in effect.
	(#65006, reported by Damon Chaplin)

Sat Mar  2 14:32:50 2002  Owen Taylor  <otaylor@redhat.com>

        * configure.in: Default to --disable-gtk-doc (avoid Jade
	breakage) and --disable-static (static linking causes
	problems with Xft changes.)

	* autogen.sh: Add --enable-gtk-doc by default.

	* Makefile.am: Add a 'mydistcheck' rule that passes
	--enable-gtk-doc to the configure since that is needed
	for 'make dist'.

	* docs/tutorial/Makefile.am (dist-hook): Don't distribute
	the PDF file. (Rule doesn't work on my system, plus it's
	big.)

	* gtk/Makefile.am: 'make dist' fixes.

Sat Mar  2 13:26:58 2002  Owen Taylor  <otaylor@redhat.com>

        * gtk/Makefile.am: Switch style of stamp file usage.
